Fixes spacing with “ and ” in metafooter and add metafooter code
Also changing an unrelated align-items: start; to align-items: flex-start; for better compatibility.

--- a/_components/evaluation-form.css
+++ b/_components/evaluation-form.css
@@ -7,7 +7,7 @@
 }
 .criterion__answers {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: stretch;
   flex-direction: column;
 }
